added method to deposit money
this will debit the 'system' account so that numbers still add up to 0 after
