# internal/transfer/controller/dto.go
@@ -1,5 +1,10 @@
 package controller
 
+type DepositMoneyRequest struct {
+	ToAccountId string
+	Amount      float64
+}
+
 type TransferMoneyRequest struct {
 	FromAccountId string
 	ToAccountId   string
